fix axios routing to localhost:8080

--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:8080",
+  "proxy": {
+    "/api/**": {
+      "target": "http://localhost:8080"
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
